Fix footer sizing causing horizontal scrollbar

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -134,4 +134,5 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    box-sizing: border-box;
 }
